--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Tony</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dqvwzivqe/image/upload/v1724739887/wgkhiz3y9xrn9mrsrbd5.png">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
 </head>
